--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "bulma": "^0.9.4",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
